# Decaf-Voxel-Engine

./: .gitignore  Cargo.toml  README.md  biomes.toml  config.toml  debug.bat  decaf.md  rustfmt.toml  sprints.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: README.md
src/: config.rs  logging.rs  main.rs
src/engine/: app.rs  input.rs  mod.rs
src/engine/app/: benchmark.rs  fps.rs  game_session.rs  mod.rs  runtime.rs  services.rs  spawn.rs  streaming.rs
src/engine/core/: collision.rs  jobs.rs  math.rs  mod.rs  types.rs
src/engine/player/: controller.rs  editing.rs  interaction.rs  mod.rs  physics.rs  state.rs
src/engine/render/: camera.rs  frustum.rs  gpu_types.rs  hiz.rs  hiz.wgsl  hud_overlay.wgsl  materials.rs  mesh_pool.rs  meshing.rs  mod.rs  renderer.rs  shaders.wgsl  sky.wgsl  targets.rs  text_overlay.wgsl  underwater_tint.wgsl
src/engine/render/renderer/: chunks.rs  draw.rs  hud.rs  mesh_upload.rs  overlay.rs  pipelines.rs
src/engine/world/: accessor.rs  biome.rs  block.rs  chunk.rs  coord.rs  edit_log.rs  generation.rs  generator.rs  lifecycle.rs  mesher.rs  mod.rs  persistence.rs  storage.rs  voxel.rs
src/engine/world/block/: builder.rs  definition.rs  flags.rs  id.rs  mod.rs  registry.rs  resolved.rs  textures.rs  tint.rs
src/engine/world/generator/: mod.rs  noise.rs  tests.rs
