[package]
name = "decaf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
glam = "0.32.1"
hashbrown = "0.16.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-error = "0.2"
tracy-client = "0.17"
wgpu = "28.0.0"
winit = "0.30.13"
