[package]
name = "decaf"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
crossbeam-channel = "0.5"
glam = "0.32.1"
ahash = "0.8"
pollster = "0.4"
thiserror = "2.0.18"
rayon = "1.11.0"
bitflags = "2.6"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-error = "0.2"
tracy-client = { version = "=0.18.4", default-features = false, features = ["enable", "manual-lifetime"] }
wgpu = "0.20"
winit = "0.29"
anyhow = "1.0.102"
image = { version = "0.25", default-features = false, features = ["png"] }
